# trustee

./: .gitmodules  Cargo.toml  rpms.lock.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.tekton/: multi-arch-build-pipeline.yaml  pipeline.yaml  trustee-intel-pull-request.yaml  trustee-intel-push.yaml  trustee-pull-request.yaml  trustee-push.yaml
attestation-service/: Dockerfile.as-grpc  Dockerfile.as-restful
kbs/docker/: Dockerfile  Dockerfile.coco-as-grpc  Dockerfile.intel-trust-authority  Dockerfile.rhel-ubi  Dockerfile.rhel-ubi-tdx
kbs/docker/rhel-ubi/: Dockerfile  Dockerfile.tdx
kbs/src/: config.rs
kbs/src/policy_engine/: mod.rs
redhat/: README.md  rpms.in.yaml
tools/trustee/: Cargo.toml
tools/trustee-cli/src/: run.rs
tools/trustee/src/: cli.rs  keys_certs.rs  main.rs
