[package]
name = "trustee"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["aliases", "plugins"]
aliases = []
plugins = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs = "6.0.0"
env_logger.workspace = true
kbs = { path = "../../kbs" }
log.workspace = true
openssl.workspace = true
tokio.workspace = true
